[tool.poetry]
name = "project-with-poetry"
version = "0.1.0"
description = ""
authors = ["widowblack11 <oksana.prokopenko16@gmail.com>"]
readme = "README.md"
packages = [{include = "project_with_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
selene = "2.0.0b16"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
